# lupai-meinsvwissen

./: .gitignore  Makefile  README.md  TODO  docker-compose.yml  locust.conf  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.github/workflows/: docker-ecr.yml
diagrams/: multi-agent.excalidraw
docker/api/: Dockerfile
docker/core/: Dockerfile
docker/mcp/: Dockerfile
lupai_mw/api/: app.py  auth.py  db.py  users.py  utils.py
lupai_mw/api/routers/: __init__.py  (+2 more)
lupai_mw/config/: config.py
lupai_mw/db/: __init__.py  mongo_connector.py
lupai_mw/llm_agents/: __init__.py  assistant.py  assitant.py  domain_detector.py  hg_tag_extractor.py  intent_detector.py  language_detector.py  law_extractor.py  organization_extractor.py  query_classifier.py  retrieval_assistant.py  sensitive_detector.py  sensitive_topic_detector.py  user_context_extractor.py  user_context_requester.py
lupai_mw/loaders/: __init__.py  base_loader.py  document_loader.py  file_loader.py  glossary_loader.py  legal_loader.py  post_loader.py  publication_loader.py  svtipps_loader.py  utils.py
lupai_mw/mcp/: mcp.py  server.py  utils.py
lupai_mw/meta/: schema.py
lupai_mw/multi_agent/: __init__.py  config.py  multi_agent.py  schema.py  utils.py
lupai_mw/utils/: history_processors.py
notebooks/01-s3/: 01-read-s3-bucket.ipynb
notebooks/02-loaders/: 01-post-loader.ipynb  02-document-loader.ipynb  02-file-loader.ipynb  03-legal-loader.ipynb  04-svtipps-loader.ipynb  05-glossary-loader.ipynb  06-publication_loader.ipynb
(+84 files in other folders)
