[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "lupai_mw"
dynamic = ["version", "dependencies"]
description = "LupAI"
readme = "README.md"
authors = [{ name = "Bas", email = "bastian.silva@aureka.ai" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["lupai_mw"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.setuptools.package-data]
"lupai_mw" = ["conf/*"]
